# Multilayer-Perceptron

./: README.md  main.py  perceptron.py
cpp/: cargar_simpsons.cpp  cargar_simpsons.h  comandos.txt  convertir_dataset.py  main.cpp  mlp.h  mnist.cpp  mnist.h
cuda/: CMakeLists.txt  gpu_info.cu  main.cpp
cuda/cuda_kernels/: activations.cuh  cuda_backward.cu  cuda_backward.cuh  cuda_forward.cu  cuda_forward.cuh  cuda_update.cu  cuda_update.cuh  loss_functions.cuh
cuda/mlp/: initializers.h  mlp.cpp  mlp.h  mlp.hpp
cuda/utils/: cargar_simpsons.cpp  cargar_simpsons.h  mnist.cpp  mnist.h
python/: cargar_mnist.py  entrenar_mnist.py  loss_history.txt  mlp.py  mlp_mnist.npz  modelo_entrenado.py  perceptron.py  puertas_logicas.py
